--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,11 @@ td {
     height: 40px;
     background-color: lightgreen;
     text-align: center;
-    color: rgb(85, 126, 24);
+    color: black;
 }
 
 .name {
     cursor: pointer;
+    color: black;
+    text-decoration: none;
 }
